tests/baselines/reference/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndGenericClassStaticFunctionOfTheSameName.types
=== tests/cases/conformance/internalModules/DeclarationMerging/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndGenericClassStaticFunctionOfTheSameName.ts ===
class clodule<T> {
>clodule : clodule<T>
>T : T

    id: string;
>id : string

    value: T;
>value : T
>T : T

    static fn<U>(id: U) { }
>fn : <U>(id: U) => void
>U : U
>id : U
>U : U
}

module clodule {
>clodule : typeof clodule

    // error: duplicate identifier expected
    export function fn<T>(x: T, y: T): T {
>fn : <T>(x: T, y: T) => T
>T : T
>x : T
>T : T
>y : T
>T : T
>T : T

        return x;
>x : T
    }
}


